--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,2 +1,34 @@
 server:
   port: 10413
+
+spring:
+  # 1. H2 DB ?? ??
+  datasource:
+    driver-class-name: org.h2.Driver
+    # H2 ?? ?? ? ? URL? ??? ??
+    url: jdbc:h2:mem:test
+    username: test
+    password: 1234
+
+  # 2. H2 ? ?? ??? (DB ???)
+  h2:
+    console:
+      enabled: true
+      path: /h2-console # http://localhost:10413/h2-console
+
+  # 3. JPA ??
+  jpa:
+    hibernate:
+      ddl-auto: create
+    # SQL ?? ?? (????)
+    show-sql: true
+    properties:
+      hibernate:
+        # H2 DB ?? ??
+        dialect: org.hibernate.dialect.H2Dialect
+        # SQL ?? ??? ???
+        format_sql: true
+
+        jdbc:
+          batch_size: 1000
+          order_inserts: true
