--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,8 +63,8 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            SERVICE_NAME1="trillion-book-peer1"
-            SERVICE_NAME2="trillion-book-peer2"
+            SERVICE_NAME1="book-peer1"
+            SERVICE_NAME2="book-peer2"
 
             echo "SSH 접속 및 디렉토리 이동..."
             mkdir -p ${{ env.DEPLOY_DIR }}
