docker 배포 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
-#spring:
-#  application:
-#    name: book-service
-#  config:
-#    import: configserver:${CONFIG_SERVER_URI:http://localhost:10418}
-#  cloud:
-#    config:
-#      username: be12-team1
-#      password: nhnacademy123!
-#
-#eureka:
-#  client:
-#    register-with-eureka: true
-#    fetch-registry: true
-#    service-url:
-#      defaultZone: ${EUREKA_URL}
+spring:
+  application:
+    name: book-service
+  config:
+    import: configserver:${CONFIG_SERVER_URI:http://localhost:10418}
+  cloud:
+    config:
+      username: be12-team1
+      password: nhnacademy123!
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: ${EUREKA_URL}
