--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 env:
   REGISTRY: ghcr.io
   REGISTRY_OWNER: nhnacademy-be12-trillion
-  IMAGE_NAME: book
+  IMAGE_NAME: book-service
   JAVA_VERSION: 21
   DEPLOY_DIR: ~/msa-project
 
