--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,13 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.12.0</version>
 		</dependency>
+
+		<!-- minI 의존성 추가 -->
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
